2006-12-12        svu

	* sql/TableObjectType.java, sql/SqlSubVFS.java: added ability to have
	complex object action hierarchies. Started implementing "Schema"
	object action, for tables (to be extended for views)

2006-12-02        svu

	* sql/SqlServerChanged.java, sql/ResultSetWindowPopup.java,
	sql/SqlServerDialog.java, sql/serverTypes/ProgressVFS.java,
	sql/serverTypes/PostgresVFS.java,
	sql/serverTypes/postgres/StoredProcedureObjectType.java,
	sql/serverTypes/ComplexVFS.java, sql/options/JdbcOptionPane.java,
	sql/options/ServersOptionPane.java, sql/options/GeneralOptionPane.jav
	, sql/SqlUtils.java, sql/SqlServerRecord.java, sql/Preprocessor.java,
	sql/SqlSubVFS.java, sql/SqlServerListChanged.java,
	sql/SqlOptionPane.java: getting rid of @created javadoc crap (most of
	it was in Russian in various encodings)
	* sql/serverTypes/oracle.xml,
	sql/serverTypes/oracle/OracleTableObjectType.java: implementing
	"Extract to DDL"

2006-12-01        svu

	* *.java: reformatting and unifying the copyright statements.

2006-11-30        svu

	* SqlPlugin.props, sql/preprocessors/VariableSubstitutor.java: fixing
	variable substitution
	* SqlPlugin.props, sql/SqlToolBar.java: moving preprocessor switchers
	to JButton/JPopupMenu
	* sql/SqlPluginPVListener.java: getting rid of NullPointerException
	while switching projects

2006-11-29        svu

	* SqlPlugin.props, sql/ResultSetWindowPopup.java,
	sql/serverTypes/oracle.xml, sql/ResultSetWindow.java: "Copy all to
	DML" popup menu works (at least for Oracle)

2006-11-27        svu

	* SqlPlugin.props, sql/ResultSetWindowPopup.java,
	sql/SqlServerRecord.java: polishing popup menu, just a bit. Preparing
	for new "Copy" menu items.

2006-11-24        svu

	* sql/serverTypes/oracle.xml, sql/SqlServerRecord.java: Allow custom
	params in the server type definition. Use custom parameter for
	introducing Oracle compatibility fix (see
	http://www.oracle.com/technology/tech/java/sqlj_jdbc/htdocs/jdbc_faq.htm#08_01).